# ride-sharing-system-design

./: CMakeLists.txt  LICENSE  README.md  compile.bat
src/: RideManager.cpp  RideManager.hpp  main.cpp
src/models/: Location.cpp  Location.hpp  Trip.cpp  Trip.hpp  User.cpp  User.hpp
